Fixed Effects on Header

--- a/index.html
+++ b/index.html
@@ -83,11 +83,7 @@
                         cloud infrastructure, ai/ml, and federal technology solutions.
                     </p>
                     <div class="hero-buttons" role="group" aria-label="action buttons">
-                        <a href="resume.pdf" class="btn-primary" download aria-label="download will's resume as pdf">
-                            <i data-lucide="download" aria-hidden="true"></i>
-                            download resume
-                        </a>
-                        <a href="contact.html" class="btn-secondary" aria-label="go to contact page to get in touch">
+                        <a href="contact.html" class="btn-primary" aria-label="go to contact page to get in touch">
                             <i data-lucide="mail" aria-hidden="true"></i>
                             get in touch
                         </a>
