Updated Image, Fixed Header Effects

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="hero-image">
                     <div class="profile-card" role="complementary" aria-labelledby="profile-title">
                         <div class="profile-frame">
-                            <img src="images/Will-Jedrzejczak-Amazon-Truck.jpeg" alt="professional headshot of will j. jedrzejczak" class="profile-image">
+                            <img src="images/250926-HCSL-Jedrzejczak.jpg" alt="professional headshot of will j. jedrzejczak" class="profile-image">
                         </div>
                         <div class="profile-title" id="profile-title">will j. jedrzejczak</div>
                         <div class="profile-subtitle">b.s. it • james madison university</div>
