Updated Main Page and Added Coursework

--- a/experience.html
+++ b/experience.html
@@ -45,6 +45,7 @@
                     <li><a href="index.html">home</a></li>
                     <li><a href="experience.html">experience</a></li>
                     <li><a href="projects.html">projects</a></li>
+                    <li><a href="coursework.html">coursework</a></li>
                     <li><a href="leadership.html">leadership</a></li>
                     <li><a href="certifications.html">certifications</a></li>
                     <li><a href="contact.html">contact</a></li>
@@ -70,15 +71,21 @@
                     <div class="timeline-item">
                         <div class="timeline-dot"></div>
                         <div class="timeline-content">
-                            <div class="timeline-title">deployment strategist</div>
+                            <div class="timeline-title">deployment strategist (usg)</div>
                             <div class="timeline-company">
                                 <a href="https://www.palantir.com" target="_blank" rel="noopener noreferrer">palantir technologies</a>
                             </div>
-                            <div class="timeline-date">starting may 2026</div>
+                            <div class="timeline-date">sep 2025 - present</div>
                             <div class="timeline-description">
-                                supporting the united states government in delivering mission-critical solutions. 
-                                working at the intersection of technology and operational challenges to help government 
-                                agencies leverage data-driven decision-making and advanced analytics.
+                                us government + business development. offered full-time role starting may 2026 before degree conferral. 
+                                palantir provides configurable solutions to confront the most complex defense challenges, from building 
+                                ai-enabled ground stations to supporting distributed multi-domain operations at the edge.
+                            </div>
+                            <div class="job-tech">
+                                <span class="tech-badge">AI/ML</span>
+                                <span class="tech-badge">Defense Technology</span>
+                                <span class="tech-badge">Government Solutions</span>
+                                <span class="tech-badge">Business Development</span>
                             </div>
                         </div>
                     </div>
@@ -86,15 +93,21 @@
                     <div class="timeline-item">
                         <div class="timeline-dot"></div>
                         <div class="timeline-content">
-                            <div class="timeline-title">research engineer</div>
+                            <div class="timeline-title">artificial intelligence engineer</div>
                             <div class="timeline-company">
                                 <a href="https://www.blueskyinnovators.com" target="_blank" rel="noopener noreferrer">blue sky innovators</a>
                             </div>
                             <div class="timeline-date">sep 2025 - present</div>
                             <div class="timeline-description">
-                                developing secure ai/ml, cyber, and rf solutions for dod and intelligence clients. 
-                                working on cutting-edge technologies to solve the toughest challenges in government 
-                                and commercial sectors, bringing "insight to operations" to client missions.
+                                r&d team; built an ml-driven cybersecurity agent with opensearch queries. blue sky innovators 
+                                supports government and commercial customers in the definition and delivery of advanced technologies 
+                                to solve the toughest challenges.
+                            </div>
+                            <div class="job-tech">
+                                <span class="tech-badge">Machine Learning</span>
+                                <span class="tech-badge">OpenSearch</span>
+                                <span class="tech-badge">Cybersecurity</span>
+                                <span class="tech-badge">R&D</span>
                             </div>
                         </div>
                     </div>
@@ -102,15 +115,20 @@
                     <div class="timeline-item">
                         <div class="timeline-dot"></div>
                         <div class="timeline-content">
-                            <div class="timeline-title">information technology specialist</div>
+                            <div class="timeline-title">network engineer</div>
                             <div class="timeline-company">
                                 <a href="https://www.rockingham.k12.va.us" target="_blank" rel="noopener noreferrer">rockingham county public schools</a>
                             </div>
-                            <div class="timeline-date">sep 2025 - present</div>
+                            <div class="timeline-date">aug 2025 - present</div>
                             <div class="timeline-description">
-                                managing pii, data migration, and infrastructure challenges for 11,500+ students. 
-                                supporting the division's mission to deliver exceptional learning experiences through 
-                                technology solutions and it management.
+                                pii, data migration, and infrastructure challenges for 11,500+ students. supporting the division's 
+                                mission to deliver exceptional learning experiences to students through comprehensive technology solutions.
+                            </div>
+                            <div class="job-tech">
+                                <span class="tech-badge">Network Infrastructure</span>
+                                <span class="tech-badge">Data Migration</span>
+                                <span class="tech-badge">PII Management</span>
+                                <span class="tech-badge">Educational Technology</span>
                             </div>
                         </div>
                     </div>
@@ -118,15 +136,24 @@
                     <div class="timeline-item">
                         <div class="timeline-dot"></div>
                         <div class="timeline-content">
-                            <div class="timeline-title">professional services national security cloud developer</div>
+                            <div class="timeline-title">professional services national security cloud engineer</div>
                             <div class="timeline-company">
                                 <a href="https://aws.amazon.com" target="_blank" rel="noopener noreferrer">amazon web services (aws)</a>
                             </div>
                             <div class="timeline-date">may 2025 - sep 2025</div>
                             <div class="timeline-description">
-                                analytics + application development for amazon dedicated cloud. doubled project scope 
-                                and tripled certification requirements. worked on secure, scalable cloud solutions 
-                                for federal government missions across civilian agencies, intelligence community, and dod.
+                                analytics + application development for amazon dedicated cloud. doubled project scope and tripled 
+                                certification requirements. aws cloud provides secure, scalable solutions for u.s. federal government 
+                                across civilian agencies, intelligence community, and department of defense.
+                            </div>
+                            <div class="job-tech">
+                                <span class="tech-badge">AWS Lambda</span>
+                                <span class="tech-badge">Amazon S3</span>
+                                <span class="tech-badge">AWS CloudFormation</span>
+                                <span class="tech-badge">Amazon Cognito</span>
+                                <span class="tech-badge">Machine Learning</span>
+                                <span class="tech-badge">Infrastructure as Code</span>
+                                <span class="tech-badge">Large Language Models</span>
                             </div>
                         </div>
                     </div>
@@ -134,15 +161,43 @@
                     <div class="timeline-item">
                         <div class="timeline-dot"></div>
                         <div class="timeline-content">
-                            <div class="timeline-title">technical engineer & subject matter expert (ii)</div>
+                            <div class="timeline-title">technical engineer & subject matter expert (ii+)</div>
                             <div class="timeline-company">
                                 <a href="https://www.mantech.com" target="_blank" rel="noopener noreferrer">mantech</a>
                             </div>
                             <div class="timeline-date">nov 2024 - may 2025</div>
                             <div class="timeline-description">
-                                supporting the cio across iam, ad, and virtualization. received two promotions in less 
-                                than a year. previously worked as software engineer (ii) on an $850m dow contract as 
-                                the only freshman on the team, developing solutions for national security missions.
+                                supporting the cio, worked across iam, ad, and virtualization. received two promotions in less 
+                                than a year. mantech proudly safeguards the country's most sensitive national security missions.
+                            </div>
+                            <div class="job-tech">
+                                <span class="tech-badge">Identity and Access Management</span>
+                                <span class="tech-badge">Active Directory</span>
+                                <span class="tech-badge">Virtualization</span>
+                                <span class="tech-badge">IT Management</span>
+                                <span class="tech-badge">Cybersecurity</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="timeline-item">
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-content">
+                            <div class="timeline-title">software engineer (ii)</div>
+                            <div class="timeline-company">
+                                <a href="https://www.mantech.com" target="_blank" rel="noopener noreferrer">mantech</a>
+                            </div>
+                            <div class="timeline-date">mar 2024 - nov 2024</div>
+                            <div class="timeline-description">
+                                development for an $850m dod contract; only freshman on the team. mantech's innovation and 
+                                capabilities organization develops game-changing technology solutions at the speed of mission.
+                            </div>
+                            <div class="job-tech">
+                                <span class="tech-badge">Python</span>
+                                <span class="tech-badge">React.js</span>
+                                <span class="tech-badge">Machine Learning</span>
+                                <span class="tech-badge">Cybersecurity</span>
+                                <span class="tech-badge">Leadership</span>
                             </div>
                         </div>
                     </div>
@@ -152,13 +207,18 @@
                         <div class="timeline-content">
                             <div class="timeline-title">cyber threat intelligence analyst</div>
                             <div class="timeline-company">
-                                <a href="https://www.cybersecurityforuminitiative.org" target="_blank" rel="noopener noreferrer">cyber security forum initiative (csfi)</a>
+                                <a href="https://www.cybersecurityforuminitiative.org" target="_blank" rel="noopener noreferrer">cyber security forum initiative</a>
                             </div>
                             <div class="timeline-date">jan 2025 - apr 2025</div>
                             <div class="timeline-description">
-                                cybercom + intelligence collection. worked with non-profit organization providing 
-                                cyber warfare awareness, guidance, and security solutions through collaboration, 
-                                education, and training for us government, military, and commercial interests.
+                                cybercom + intelligence collection. csfi provides cyber warfare awareness, guidance, and security 
+                                solutions through collaboration, education, and training to assist the us government, military, 
+                                commercial interests, and international partners.
+                            </div>
+                            <div class="job-tech">
+                                <span class="tech-badge">Cyber Intelligence</span>
+                                <span class="tech-badge">Threat Analysis</span>
+                                <span class="tech-badge">Cybersecurity</span>
                             </div>
                         </div>
                     </div>
@@ -166,15 +226,62 @@
                     <div class="timeline-item">
                         <div class="timeline-dot"></div>
                         <div class="timeline-content">
-                            <div class="timeline-title">cyber security analyst</div>
+                            <div class="timeline-title">cybersecurity analyst</div>
                             <div class="timeline-company">
                                 <a href="https://solvitursystemsllc.com" target="_blank" rel="noopener noreferrer">solvitur systems llc</a>
                             </div>
                             <div class="timeline-date">sep 2024 - dec 2024</div>
                             <div class="timeline-description">
-                                user experience design + web security testing. collaborated with clients on regulatory 
-                                compliance, security assessments, and cybersecurity modernization to create more 
-                                resilient cyber environments.
+                                user experience design + web security testing. solvitur systems protects businesses from cyber 
+                                threats with expertise in regulatory compliance, security assessments, and cybersecurity modernization.
+                            </div>
+                            <div class="job-tech">
+                                <span class="tech-badge">Web Security Testing</span>
+                                <span class="tech-badge">UX Design</span>
+                                <span class="tech-badge">IT Projects</span>
+                                <span class="tech-badge">Cybersecurity</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="timeline-item">
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-content">
+                            <div class="timeline-title">leadership, allyship & mentorship scholar</div>
+                            <div class="timeline-company">
+                                <a href="https://www.deloitte.com" target="_blank" rel="noopener noreferrer">deloitte</a>
+                            </div>
+                            <div class="timeline-date">mar 2024 - nov 2024</div>
+                            <div class="timeline-description">
+                                selected twice + youngest summer 2024 member for cohort. ai & engineering focus. deloitte has 
+                                worked with leaders around the world for over 180 years to help them build better futures.
+                            </div>
+                            <div class="job-tech">
+                                <span class="tech-badge">Artificial Intelligence</span>
+                                <span class="tech-badge">Engineering</span>
+                                <span class="tech-badge">Leadership Development</span>
+                                <span class="tech-badge">Mentorship</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="timeline-item">
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-content">
+                            <div class="timeline-title">first-year researcher & developer</div>
+                            <div class="timeline-company">
+                                <a href="https://www.jmu.edu/cs" target="_blank" rel="noopener noreferrer">jmu computer science</a>
+                            </div>
+                            <div class="timeline-date">dec 2023 - may 2024</div>
+                            <div class="timeline-description">
+                                musiccpr (create, perform, respond) project. developed a web application that functions as a 
+                                niche learning management system for music education and performance.
+                            </div>
+                            <div class="job-tech">
+                                <span class="tech-badge">Web Development</span>
+                                <span class="tech-badge">Scholarly Research</span>
+                                <span class="tech-badge">Computer Science</span>
+                                <span class="tech-badge">Programming</span>
                             </div>
                         </div>
                     </div>
