--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                         <li role="none"><a href="#home" role="menuitem" aria-label="go to home section">home</a></li>
                         <li role="none"><a href="experience.html" role="menuitem" aria-label="view experience page">experience</a></li>
                         <li role="none"><a href="projects.html" role="menuitem" aria-label="view projects">projects</a></li>
+                        <li role="none"><a href="coursework.html" role="menuitem" aria-label="view coursework">coursework</a></li>
                         <li role="none"><a href="leadership.html" role="menuitem" aria-label="view leadership page">leadership</a></li>
                         <li role="none"><a href="certifications.html" role="menuitem" aria-label="view certifications">certifications</a></li>
                         <li role="none"><a href="contact.html" role="menuitem" aria-label="go to contact page">contact</a></li>
@@ -78,9 +79,13 @@
                     <div class="subtitle" role="text">deployment strategist at palantir technologies</div>
                     <h1 id="hero-title" data-text="will j. jedrzejczak">will j. jedrzejczak</h1>
                     <p class="description" role="text">
-                        valedictorian-ranked b.s. it student at james madison university. 
-                        aws professional services intern, mantech engineer, and cybersecurity analyst specializing in 
-                        cloud infrastructure, ai/ml, and federal technology solutions.
+                        it all started with youtube videos about computer viruses. what began as childhood curiosity 
+                        turned into a self-taught journey through cybersecurity, leading me to jmu where i became 
+                        valedictorian of my major while racking up 5 internships. then palantir called at the start 
+                        of my junior year asking if i'd be willing to drop out after may 2026. naturally, i said yes.
+                        <br><br>
+                        when i'm not building secure ai/ml solutions for the government, you'll find me lifting weights, 
+                        discovering new music, or outperforming the market by a mile on my fidelity account.
                     </p>
                     <div class="hero-buttons" role="group" aria-label="action buttons">
                         <a href="contact.html" class="btn-primary" aria-label="go to contact page to get in touch">
@@ -110,6 +115,7 @@
                     <a href="#home">home</a>
                     <a href="experience.html">experience</a>
                     <a href="projects.html">projects</a>
+                    <a href="coursework.html">coursework</a>
                     <a href="leadership.html">leadership</a>
                     <a href="certifications.html">certifications</a>
                     <a href="contact.html">contact</a>
