--- a/certifications.html
+++ b/certifications.html
@@ -9,7 +9,10 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Source+Serif+Pro:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+    
+    <!-- Preload custom font -->
+    <link rel="preload" href="fonts/Alliance No.2 Regular.otf" as="font" type="font/otf" crossorigin>
     
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lucide/0.263.1/lucide.min.css">
@@ -45,6 +48,7 @@
                     <li><a href="index.html">home</a></li>
                     <li><a href="experience.html">experience</a></li>
                     <li><a href="projects.html">projects</a></li>
+                    <li><a href="coursework.html">coursework</a></li>
                     <li><a href="leadership.html">leadership</a></li>
                     <li><a href="certifications.html">certifications</a></li>
                     <li><a href="contact.html">contact</a></li>
