--- a/index.html
+++ b/index.html
@@ -64,10 +64,33 @@
                     </ul>
                 </div>
                 <div class="nav-right">
+                    <button class="mobile-menu-toggle" id="mobile-menu-toggle" aria-label="toggle mobile menu">
+                        <span class="hamburger-line"></span>
+                        <span class="hamburger-line"></span>
+                        <span class="hamburger-line"></span>
+                    </button>
                     <button class="theme-toggle" id="theme-toggle" aria-label="toggle dark/light mode">
                         <span id="theme-icon">☀️</span>
                     </button>
                 </div>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Mobile Menu Overlay -->
+    <div class="mobile-menu-overlay" id="mobile-menu-overlay">
+        <div class="mobile-menu-content">
+            <ul class="mobile-nav-links">
+                <li><a href="#home" class="mobile-nav-link">home</a></li>
+                <li><a href="experience.html" class="mobile-nav-link">experience</a></li>
+                <li><a href="projects.html" class="mobile-nav-link">projects</a></li>
+                <li><a href="coursework.html" class="mobile-nav-link">coursework</a></li>
+                <li><a href="leadership.html" class="mobile-nav-link">leadership</a></li>
+                <li><a href="certifications.html" class="mobile-nav-link">certifications</a></li>
+                <li><a href="contact.html" class="mobile-nav-link">contact</a></li>
+            </ul>
+        </div>
+    </div>
             </div>
     </nav>
 
@@ -214,6 +237,36 @@
                 observer.observe(el);
             });
         });
+
+        // Mobile menu functionality
+        const mobileMenuToggle = document.getElementById('mobile-menu-toggle');
+        const mobileMenuOverlay = document.getElementById('mobile-menu-overlay');
+        
+        if (mobileMenuToggle && mobileMenuOverlay) {
+            mobileMenuToggle.addEventListener('click', () => {
+                mobileMenuToggle.classList.toggle('active');
+                mobileMenuOverlay.classList.toggle('active');
+                document.body.style.overflow = mobileMenuOverlay.classList.contains('active') ? 'hidden' : '';
+            });
+
+            // Close mobile menu when clicking on a link
+            document.querySelectorAll('.mobile-nav-link').forEach(link => {
+                link.addEventListener('click', () => {
+                    mobileMenuToggle.classList.remove('active');
+                    mobileMenuOverlay.classList.remove('active');
+                    document.body.style.overflow = '';
+                });
+            });
+
+            // Close mobile menu when clicking overlay
+            mobileMenuOverlay.addEventListener('click', (e) => {
+                if (e.target === mobileMenuOverlay) {
+                    mobileMenuToggle.classList.remove('active');
+                    mobileMenuOverlay.classList.remove('active');
+                    document.body.style.overflow = '';
+                }
+            });
+        }
 
         // Enhanced button hover effects
         document.querySelectorAll('.btn-primary, .btn-secondary').forEach(btn => {
